Refactored backend code